src/app.css
/* 瀑布流主容器 */
div.waterfall {
  width: 100%;
  padding-top: 20px;
  padding-bottom: 60px;
  border-radius: 20px;
  height: 100%;

  /* margin: 0 auto; */
  margin: 20px auto;

  transition: height 0.3s;
}

/* newMT: 瀑布流容器专用*/
div.waterfall_newMT {
  padding-top: 0;
  padding-bottom: 0;
  margin: 10px auto;
}

/* 调试按键统一样式 */
button.debug {
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 4px;
  background-color: #333;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

/* 调试按键1: 显示隐藏原种子列表 */
button#toggle_oldTable {
  top: 10px;
}

/* 调试按键2: Masonry 切换卡片宽度 */
button#btnReLayout {
  top: 40px;
}

/* 调试按键3: 切换下一页加载方式 */
button#btnSwitchMode {
  top: 70px;
}

/* 调试按键4: Masonry 重新排列 */
button#sort_masonry {
  top: 100px;
}

/* 卡片: 图片加载失败 */
.pic_error {
  height: 100px;

  display: flex;
  justify-content: center;
  align-items: center;
}

